adjust for Java 8